--- a/LoanMinnow/package.json
+++ b/LoanMinnow/package.json
@@ -1,15 +1,13 @@
 {
     "name": "loanminnow",
     "version": "1.0.0",
-    "description": "LoanMinnow application",
     "scripts": {
-        "start:client": "cd client && npm start",
-        "start:api": "python app.py",
-        "dev": "concurrently \"npm run start:client\" \"flask --app loanminnow:app --debug run --host 0.0.0.0 --port 8000\"",
-        "install:client": "cd client && npm install",
-        "install:all": "npm install && npm run install:client"
+      "start:client": "cd client && npm start",
+      "start:api": "cd .. && flask --app loanminnow:app --debug run --host 0.0.0.0 --port 8000",
+      "dev": "concurrently \"npm run start:client\" \"npm run start:api\""
     },
     "devDependencies": {
-        "concurrently": "^9.1.2"
+      "concurrently": "^9.1.2"
     }
-}
+  }
+  
