--- a/LoanMinnow/package.json
+++ b/LoanMinnow/package.json
@@ -2,12 +2,12 @@
     "name": "loanminnow",
     "version": "1.0.0",
     "scripts": {
-      "start:client": "cd client && npm start",
-      "start:api": "cd .. && flask --app loanminnow:app --debug run --host 0.0.0.0 --port 8000",
-      "dev": "concurrently \"npm run start:client\" \"npm run start:api\""
+        "start:client": "cd client && npm start",
+        "start:api": "cd .. && flask --app loanminnow:app --debug run --host 0.0.0.0 --port 8000",
+        "dev": "concurrently \"npm run start:client\" \"npm run start:api\""
     },
     "devDependencies": {
-      "concurrently": "^9.1.2"
+        "concurrently": "^9.1.2",
+        "typescript": "^5.7.3"
     }
-  }
-  
+}
