--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+alembic==1.14.1
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
+-e git+ssh://git@github.com/jerry12543/spartahackX.git@d6d3be633a150828a257ea679b334f9ff26d0bbd#egg=loanminnow&subdirectory=loanminnow
+Mako==1.3.8
 MarkupSafe==3.0.2
 SQLAlchemy==2.0.37
 typing_extensions==4.12.2
