--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
--e git+ssh://git@github.com/jerry12543/spartahackX.git@d6d3be633a150828a257ea679b334f9ff26d0bbd#egg=loanminnow&subdirectory=loanminnow
 Mako==1.3.8
 MarkupSafe==3.0.2
 SQLAlchemy==2.0.37
+-e ./loanminnow
 typing_extensions==4.12.2
 Werkzeug==3.1.3
